--- a/gateway/package.json
+++ b/gateway/package.json
@@ -16,14 +16,14 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/gateway": "^0.11.3",
-    "@proplay/message-broker": "0.0.5",
+    "@proplay/context": "0.0.12",
+    "@proplay/message-broker": "0.0.15",
     "@proplay/utils": "0.0.1",
     "apollo-server": "^2.9.12",
     "graphql": "^14.5.8",
     "redis": "^2.8.0"
   },
   "devDependencies": {
-    "@types/graphql": "^14.5.0",
     "@types/node": "^12.12.14",
     "@types/node-fetch": "^2.5.4",
     "@types/redis": "^2.8.14",
