--- a/posts/package.json
+++ b/posts/package.json
@@ -16,7 +16,9 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/federation": "^0.11.2",
-    "@proplay/context": "0.0.1",
+    "@proplay/context": "0.0.12",
+    "@proplay/message-broker": "0.0.15",
+    "@proplay/type-graphql": "^0.17.5",
     "@proplay/utils": "0.0.2",
     "apollo-server": "^2.9.12",
     "class-transformer": "^0.2.3",
@@ -26,13 +28,11 @@
     "pg": "^7.14.0",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^4.1.0",
-    "type-graphql": "git+https://github.com/polarpop/type-graphql.git",
     "typedi": "^0.8.0",
     "typeorm": "^0.2.20",
     "typeorm-typedi-extensions": "^0.2.3"
   },
   "devDependencies": {
-    "@types/graphql": "^14.5.0",
     "@types/node": "^12.12.14",
     "@types/node-fetch": "^2.5.4",
     "typescript": "^3.7.2"
